--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "opengrc-api"
-version = "1.3.0"
+version = "1.4.0"
 edition = "2021"
 
 [dependencies]
@@ -52,5 +52,7 @@ mime_guess = "2.0"
 
 # Search
 meilisearch-sdk = "0.28"
+sha2 = "0.10.9"
+urlencoding = "2.1.3"
 
 [dev-dependencies]
