--- a/api/.env.example
+++ b/api/.env.example
@@ -19,6 +19,23 @@ TV_API_KEY=your_api_key_here
 # CORS Configuration
 CORS_ORIGINS=http://localhost:3000,http://localhost:3001
 
+# Storage Configuration
+# Use "local" for development (files stored on disk)
+# Use "s3" for production (files stored in S3)
+STORAGE_TYPE=local
+STORAGE_LOCAL_PATH=./storage
+
+# S3 Configuration (only needed if STORAGE_TYPE=s3)
+# S3_BUCKET=opengrc-evidence
+# S3_REGION=us-east-1
+# S3_ENDPOINT=                        # Optional: for MinIO/LocalStack
+# AWS_ACCESS_KEY_ID=                  # Optional: uses IAM role if not set
+# AWS_SECRET_ACCESS_KEY=
+
+# Encryption Key (required in production)
+# Generate with: openssl rand -hex 32
+# ENCRYPTION_KEY=your_64_character_hex_key_here
+
 # Logging Configuration
 RUST_LOG=info,opengrc_api=debug
 
